проверка с помощью swagger
